config/k8s/sql-server-deployment.yaml
# sql-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sql-server
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sql-server
  template:
    metadata:
      labels:
        app: sql-server
    spec:
      containers:
      - name: sql-server
        image: mcr.microsoft.com/mssql/server:2022-latest
        ports:
        - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: sql-server-service
  namespace: ecommerce
spec:
  selector:
    app: sql-server
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
